--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -321,7 +321,7 @@
             "order": 6,
             "name": "체력 회복 - 탭탭 - 10회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-15T10:16:42.262483",
+            "updated_at": "2024-12-15T13:14:30.525740",
             "trigger_key": {
                 "key_code": "F2",
                 "modifiers": 0,
@@ -361,8 +361,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0555초",
-                    "duration": 0.0555,
+                    "display_text": "지연시간 : 0.1000초",
+                    "duration": 0.1,
                     "order": 5
                 },
                 {
@@ -724,7 +724,7 @@
             "order": 13,
             "name": "((1초)) 보호 무장 힘",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-15T12:51:47.148947",
+            "updated_at": "2024-12-15T13:22:55.833327",
             "trigger_key": {
                 "key_code": "숫자패드 +",
                 "modifiers": 0,
@@ -736,8 +736,8 @@
             "items": [
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
                     "order": 1
                 },
                 {
@@ -750,8 +750,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
                     "order": 3
                 },
                 {
@@ -766,8 +766,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
                     "order": 5
                 },
                 {
@@ -781,117 +781,23 @@
                     "modifiers": 0
                 },
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 7
+                    "order": 7,
+                    "display_text": "키 입력: Z --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "Z",
+                    "scan_code": 44,
+                    "virtual_key": 90,
+                    "modifiers": 0
                 },
                 {
-                    "order": 8,
-                    "display_text": "키 입력: X --- 누르기",
-                    "action": "누르기",
-                    "type": "key_input",
-                    "key_code": "X",
-                    "scan_code": 45,
-                    "virtual_key": 88,
-                    "modifiers": 0
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 8
                 },
                 {
                     "order": 9,
-                    "display_text": "키 입력: X --- 떼기",
-                    "action": "떼기",
-                    "type": "key_input",
-                    "key_code": "X",
-                    "scan_code": 45,
-                    "virtual_key": 88,
-                    "modifiers": 0
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 10
-                },
-                {
-                    "order": 11,
-                    "display_text": "키 입력: Z --- 누르기",
-                    "action": "누르기",
-                    "type": "key_input",
-                    "key_code": "Z",
-                    "scan_code": 44,
-                    "virtual_key": 90,
-                    "modifiers": 0
-                },
-                {
-                    "order": 12,
-                    "display_text": "키 입력: Z --- 떼기",
-                    "action": "떼기",
-                    "type": "key_input",
-                    "key_code": "Z",
-                    "scan_code": 44,
-                    "virtual_key": 90,
-                    "modifiers": 0
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 13
-                },
-                {
-                    "order": 14,
-                    "display_text": "키 입력: Y --- 누르기",
-                    "action": "누르기",
-                    "type": "key_input",
-                    "key_code": "Y",
-                    "scan_code": 21,
-                    "virtual_key": 89,
-                    "modifiers": 0
-                },
-                {
-                    "order": 15,
-                    "display_text": "키 입력: Y --- 떼기",
-                    "action": "떼기",
-                    "type": "key_input",
-                    "key_code": "Y",
-                    "scan_code": 21,
-                    "virtual_key": 89,
-                    "modifiers": 0
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 16
-                },
-                {
-                    "order": 17,
-                    "display_text": "키 입력: Z --- 누르기",
-                    "action": "누르기",
-                    "type": "key_input",
-                    "key_code": "Z",
-                    "scan_code": 44,
-                    "virtual_key": 90,
-                    "modifiers": 0
-                },
-                {
-                    "order": 18,
-                    "display_text": "키 입력: Z --- 떼기",
-                    "action": "떼기",
-                    "type": "key_input",
-                    "key_code": "Z",
-                    "scan_code": 44,
-                    "virtual_key": 90,
-                    "modifiers": 0
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 19
-                },
-                {
-                    "order": 20,
                     "display_text": "키 입력: W --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
@@ -901,7 +807,7 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 21,
+                    "order": 10,
                     "display_text": "키 입력: W --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -912,12 +818,116 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 22
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 11
                 },
                 {
-                    "order": 23,
+                    "order": 12,
+                    "display_text": "키 입력: Z --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "Z",
+                    "scan_code": 44,
+                    "virtual_key": 90,
+                    "modifiers": 0
+                },
+                {
+                    "order": 13,
+                    "display_text": "키 입력: Z --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "Z",
+                    "scan_code": 44,
+                    "virtual_key": 90,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 14
+                },
+                {
+                    "order": 15,
+                    "display_text": "키 입력: X --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "X",
+                    "scan_code": 45,
+                    "virtual_key": 88,
+                    "modifiers": 0
+                },
+                {
+                    "order": 16,
+                    "display_text": "키 입력: X --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "X",
+                    "scan_code": 45,
+                    "virtual_key": 88,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 17
+                },
+                {
+                    "order": 18,
+                    "display_text": "키 입력: Z --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "Z",
+                    "scan_code": 44,
+                    "virtual_key": 90,
+                    "modifiers": 0
+                },
+                {
+                    "order": 19,
+                    "display_text": "키 입력: Z --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "Z",
+                    "scan_code": 44,
+                    "virtual_key": 90,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 20
+                },
+                {
+                    "order": 21,
+                    "display_text": "키 입력: Y --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "Y",
+                    "scan_code": 21,
+                    "virtual_key": 89,
+                    "modifiers": 0
+                },
+                {
+                    "order": 22,
+                    "display_text": "키 입력: Y --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "Y",
+                    "scan_code": 21,
+                    "virtual_key": 89,
+                    "modifiers": 0
+                },
+                {
+                    "type": "delay",
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 23
+                },
+                {
+                    "order": 24,
                     "display_text": "키 입력: 왼쪽 쉬프트 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -928,12 +938,12 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 24
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 25
                 },
                 {
-                    "order": 25,
+                    "order": 26,
                     "type": "logic",
                     "display_text": "탭탭 고정 해제",
                     "logic_id": "3b3431ef-08c5-43e0-bc9f-8f02b9fb96e5",
@@ -942,9 +952,9 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0388초",
-                    "duration": 0.0388,
-                    "order": 26
+                    "display_text": "지연시간 : 0.0342초",
+                    "duration": 0.0342,
+                    "order": 27
                 }
             ]
         },
@@ -1262,7 +1272,7 @@
             "order": 18,
             "name": "첨 중독 - 조합본 - 9999회",
             "created_at": "2024-12-02T02:03:00.957188",
-            "updated_at": "2024-12-15T12:59:28.885607",
+            "updated_at": "2024-12-15T13:11:45.302898",
             "trigger_key": {
                 "key_code": "숫자패드 9",
                 "modifiers": 0,
@@ -1273,13 +1283,7 @@
             "is_nested": false,
             "items": [
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0466초",
-                    "duration": 0.0466,
-                    "order": 1
-                },
-                {
-                    "order": 2,
+                    "order": 1,
                     "type": "logic",
                     "display_text": "ㄴ 중독만 - 5회 (첨이랑 딱 맞음)",
                     "logic_id": "1f3d9c9f-5f36-40e1-8062-4aa10c6b5cdf",
@@ -1287,13 +1291,7 @@
                     "repeat_count": 1
                 },
                 {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0466초",
-                    "duration": 0.0466,
-                    "order": 3
-                },
-                {
-                    "order": 4,
+                    "order": 2,
                     "display_text": "키 입력: 숫자패드 9 --- 누르기",
                     "action": "누르기",
                     "type": "key_input",
@@ -1303,7 +1301,7 @@
                     "modifiers": 0
                 },
                 {
-                    "order": 5,
+                    "order": 3,
                     "display_text": "키 입력: 숫자패드 9 --- 떼기",
                     "action": "떼기",
                     "type": "key_input",
@@ -1311,12 +1309,6 @@
                     "scan_code": 73,
                     "virtual_key": 105,
                     "modifiers": 0
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.0466초",
-                    "duration": 0.0466,
-                    "order": 6
                 }
             ]
         },
@@ -1412,20 +1404,15 @@
             "order": 20,
             "name": "ㄴ 중독만 - 5회 (첨이랑 딱 맞음)",
             "created_at": "2024-12-08T20:39:14.995922",
-            "updated_at": "2024-12-15T12:38:32.145431",
-            "trigger_key": {
-                "key_code": "Space",
-                "modifiers": 0,
-                "scan_code": 57,
-                "virtual_key": 32
-            },
+            "updated_at": "2024-12-15T13:12:13.880213",
+            "trigger_key": null,
             "repeat_count": 5,
-            "is_nested": false,
+            "is_nested": true,
             "items": [
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0185초",
-                    "duration": 0.0185,
+                    "display_text": "지연시간 : 0.0176초",
+                    "duration": 0.0176,
                     "order": 1
                 },
                 {
@@ -1450,8 +1437,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0185초",
-                    "duration": 0.0185,
+                    "display_text": "지연시간 : 0.0176초",
+                    "duration": 0.0176,
                     "order": 4
                 },
                 {
@@ -1476,8 +1463,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0185초",
-                    "duration": 0.0185,
+                    "display_text": "지연시간 : 0.0176초",
+                    "duration": 0.0176,
                     "order": 7
                 },
                 {
@@ -1502,8 +1489,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0185초",
-                    "duration": 0.0185,
+                    "display_text": "지연시간 : 0.0176초",
+                    "duration": 0.0176,
                     "order": 10
                 }
             ]
@@ -1962,16 +1949,10 @@
             "order": 26,
             "name": "((1초)) 마비 - 상하좌우",
             "created_at": "2024-12-09T13:56:02.913186",
-            "updated_at": "2024-12-15T12:43:49.296571",
-            "trigger_key": {
-                "is_system_key": false,
-                "key_code": "왼쪽 컨트롤",
-                "modifiers": 0,
-                "scan_code": 29,
-                "virtual_key": 162
-            },
+            "updated_at": "2024-12-15T13:12:17.834510",
+            "trigger_key": null,
             "repeat_count": 1,
-            "is_nested": false,
+            "is_nested": true,
             "items": [
                 {
                     "order": 1,
